// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddPlayerTurn /> renders <AddPlayerTurn /> component with origin and destination planet selected 1`] = `
.emotion-3 {
  border: 1px solid #0071C2;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 16px;
  cursor: pointer;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  position: relative;
  background-color: #fff;
  color: #0071C2;
  font-size: 14px;
  font-weight: 700;
  line-height: 20px;
}

.emotion-3:hover,
.emotion-3:active {
  background-color: #E4F4FF;
  border-color: #005C9D;
}

.emotion-3 [disabled],
.emotion-3 [disabled]:hover {
  background-color: #6B6B6B;
  border-color: #6B6B6B;
  cursor: not-allowed;
}

.emotion-2 {
  border: 1px solid #0071C2;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 16px;
  cursor: pointer;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  position: relative;
  background-color: #0071C2;
  color: #fff;
  font-size: 14px;
  font-weight: 700;
  line-height: 20px;
}

.emotion-2:hover,
.emotion-2:active {
  background-color: #005C9D;
  border-color: #005C9D;
}

.emotion-2 [disabled],
.emotion-2 [disabled]:hover {
  background-color: #6B6B6B;
  border-color: #6B6B6B;
  cursor: not-allowed;
}

.emotion-1 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-0 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  background: #fff;
  border-radius: 2px;
  border: 1px solid #E6E6E6;
  display: block;
  width: 100%;
  text-align: left;
  margin: 8px 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: calc(8px + 1px);
  outline: none;
}

.emotion-0:focus {
  outline: none;
  box-shadow: 0 0 0 3px rgba(0,113,194,0.3);
  border-color: #0071C2;
  border-radius: 2px;
}

<div>
  <div>
    <h2>
      test
       turn
    </h2>
    <legend>
      Sending fleet from 
      A
       to 
      B
      . Select amount:
    </legend>
    <div
      class="emotion-1"
    >
      <input
        class="emotion-0"
        data-testid="order-amount"
        type="number"
        value="10"
      />
    </div>
    <button
      class="emotion-2"
      type="button"
    >
      Add order
    </button>
    <button
      class="emotion-3"
      type="button"
    >
      Cancel order
    </button>
  </div>
</div>
`;

exports[`<AddPlayerTurn /> renders <AddPlayerTurn /> component with origin planet selected 1`] = `
.emotion-0 {
  border: 1px solid #0071C2;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 8px 16px;
  cursor: pointer;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  vertical-align: middle;
  position: relative;
  background-color: #fff;
  color: #0071C2;
  font-size: 14px;
  font-weight: 700;
  line-height: 20px;
}

.emotion-0:hover,
.emotion-0:active {
  background-color: #E4F4FF;
  border-color: #005C9D;
}

.emotion-0 [disabled],
.emotion-0 [disabled]:hover {
  background-color: #6B6B6B;
  border-color: #6B6B6B;
  cursor: not-allowed;
}

<div>
  <div>
    <h2>
      test
       turn
    </h2>
    <div>
      Please select destination planet
    </div>
    <button
      class="emotion-0"
      type="button"
    >
      Cancel order
    </button>
  </div>
</div>
`;

exports[`<AddPlayerTurn /> renders <AddPlayerTurn /> component without any selected planets 1`] = `
<div>
  <div>
    <h2>
      test
       turn
    </h2>
    <div>
      Please select origin planet
    </div>
  </div>
</div>
`;
